<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/mPhotoImageView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:contentDescription="@string/descriptionImage"
        android:src="@drawable/skin_logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp">

        <ImageButton
            android:id="@+id/mCameraButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/ic_camera"
            android:scaleType="fitCenter"
            android:onClick="onYesButtonClicked"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/buttonTakePhoto"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/mGalleryButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/ic_upload"
            android:scaleType="fitCenter"
            android:onClick="onYesButtonClicked"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/buttonSelectPhoto"
            android:layout_marginStart="8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/mDetectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDiagnose"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp" />

    <TextView
        android:id="@+id/mResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultImage"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>
